--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "llama-index==0.8.19",
     "openai==0.28",
     "nltk==3.8.1",
-    "GitPython==3.1.34"
+    "GitPython==3.1.34",
+    "ruff==0.0.287",
+    "pre-commit==3.5.0"
 ]
 classifiers = [
     "Programming Language :: Python :: 3.9",
